--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
     "express": "^4.18.3",
+    "google-auth-library": "^9.7.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
